src/Grammer/PaythonGrammer/PyFlaskParser.java
// Generated from D:/compiler_2/Compiler/src/Grammer/PaythonGrammer/PyFlaskParser.g4 by ANTLR 4.13.2
package Grammer.PaythonGrammer;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PyFlaskParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAREN=1, RPAREN=2, LBRACK=3, RBRACK=4, LBRACE=5, RBRACE=6, ATSIGN=7, 
		DOT=8, COMMA=9, COLON=10, ASSIGN=11, EQ=12, PLUS=13, MINUS=14, STAR=15, 
		SLASH=16, BREAK=17, CONTINUE=18, DEF=19, IF=20, ELSE=21, FOR=22, IN=23, 
		FROM=24, IMPORT=25, RETURN=26, TRUE=27, FALSE=28, NONE=29, IS=30, AND=31, 
		OR=32, NOT=33, ID=34, NUMBER=35, STRING=36, NEWLINE=37, WS=38, COMMENT=39, 
		BLOCKSTART=40, BLOCKEND=41, GT=42, LT=43, GTE=44, LTE=45, NEQ=46;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_simpleStmt = 2, RULE_importstatement = 3, 
		RULE_importList = 4, RULE_decoratorExpr = 5, RULE_decorator = 6, RULE_functionDef = 7, 
		RULE_parameters = 8, RULE_block = 9, RULE_ifstatement = 10, RULE_forstatement = 11, 
		RULE_returnStmt = 12, RULE_assignment = 13, RULE_expr = 14, RULE_arg = 15, 
		RULE_argList = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "simpleStmt", "importstatement", "importList", 
			"decoratorExpr", "decorator", "functionDef", "parameters", "block", "ifstatement", 
			"forstatement", "returnStmt", "assignment", "expr", "arg", "argList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'['", "']'", "'{'", "'}'", "'@'", "'.'", "','", 
			"':'", "'='", "'=='", "'+'", "'-'", "'*'", "'/'", "'break'", "'continue'", 
			"'def'", "'if'", "'else'", "'for'", "'in'", "'from'", "'import'", "'return'", 
			"'True'", "'False'", "'None'", "'is'", "'and'", "'or'", "'not'", null, 
			null, null, null, null, null, "'<BLOCKSTART>'", "'<BLOCKEND>'", "'>'", 
			"'<'", "'>='", "'<='", "'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", "ATSIGN", 
			"DOT", "COMMA", "COLON", "ASSIGN", "EQ", "PLUS", "MINUS", "STAR", "SLASH", 
			"BREAK", "CONTINUE", "DEF", "IF", "ELSE", "FOR", "IN", "FROM", "IMPORT", 
			"RETURN", "TRUE", "FALSE", "NONE", "IS", "AND", "OR", "NOT", "ID", "NUMBER", 
			"STRING", "NEWLINE", "WS", "COMMENT", "BLOCKSTART", "BLOCKEND", "GT", 
			"LT", "GTE", "LTE", "NEQ"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PyFlaskParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PyFlaskParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgramRootContext extends ProgramContext {
		public TerminalNode EOF() { return getToken(PyFlaskParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(PyFlaskParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PyFlaskParser.NEWLINE, i);
		}
		public ProgramRootContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).enterProgramRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).exitProgramRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyFlaskParserVisitor ) return ((PyFlaskParserVisitor<? extends T>)visitor).visitProgramRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new ProgramRootContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 258761162922L) != 0)) {
				{
				setState(36);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LPAREN:
				case LBRACK:
				case LBRACE:
				case ATSIGN:
				case BREAK:
				case CONTINUE:
				case DEF:
				case IF:
				case FOR:
				case FROM:
				case IMPORT:
				case RETURN:
				case TRUE:
				case FALSE:
				case NONE:
				case ID:
				case NUMBER:
				case STRING:
					{
					setState(34);
					statement();
					}
					break;
				case NEWLINE:
					{
					setState(35);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(41);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtImportContext extends StatementContext {
		public ImportstatementContext importstatement() {
			return getRuleContext(ImportstatementContext.class,0);
		}
		public StmtImportContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).enterStmtImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).exitStmtImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyFlaskParserVisitor ) return ((PyFlaskParserVisitor<? extends T>)visitor).visitStmtImport(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtSimpleContext extends StatementContext {
		public SimpleStmtContext simpleStmt() {
			return getRuleContext(SimpleStmtContext.class,0);
		}
		public StmtSimpleContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).enterStmtSimple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).exitStmtSimple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyFlaskParserVisitor ) return ((PyFlaskParserVisitor<? extends T>)visitor).visitStmtSimple(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtFunctionContext extends StatementContext {
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public StmtFunctionContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).enterStmtFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).exitStmtFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyFlaskParserVisitor ) return ((PyFlaskParserVisitor<? extends T>)visitor).visitStmtFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtDecoratedFunctionContext extends StatementContext {
		public DecoratorContext decorator() {
			return getRuleContext(DecoratorContext.class,0);
		}
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public StmtDecoratedFunctionContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).enterStmtDecoratedFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).exitStmtDecoratedFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyFlaskParserVisitor ) return ((PyFlaskParserVisitor<? extends T>)visitor).visitStmtDecoratedFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FROM:
			case IMPORT:
				_localctx = new StmtImportContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(43);
				importstatement();
				}
				break;
			case ATSIGN:
				_localctx = new StmtDecoratedFunctionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				decorator();
				setState(45);
				functionDef();
				}
				break;
			case DEF:
				_localctx = new StmtFunctionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				functionDef();
				}
				break;
			case LPAREN:
			case LBRACK:
			case LBRACE:
			case BREAK:
			case CONTINUE:
			case IF:
			case FOR:
			case RETURN:
			case TRUE:
			case FALSE:
			case NONE:
			case ID:
			case NUMBER:
			case STRING:
				_localctx = new StmtSimpleContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(48);
				simpleStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleStmtContext extends ParserRuleContext {
		public SimpleStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleStmt; }
	 
		public SimpleStmtContext() { }
		public void copyFrom(SimpleStmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ContinueStmtContext extends SimpleStmtContext {
		public TerminalNode CONTINUE() { return getToken(PyFlaskParser.CONTINUE, 0); }
		public ContinueStmtContext(SimpleStmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).enterContinueStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).exitContinueStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyFlaskParserVisitor ) return ((PyFlaskParserVisitor<? extends T>)visitor).visitContinueStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleReturnContext extends SimpleStmtContext {
		public ReturnStmtContext returnStmt() {
			return getRuleContext(ReturnStmtContext.class,0);
		}
		public SimpleReturnContext(SimpleStmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).enterSimpleReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).exitSimpleReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyFlaskParserVisitor ) return ((PyFlaskParserVisitor<? extends T>)visitor).visitSimpleReturn(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BreakStmtNodeContext extends SimpleStmtContext {
		public TerminalNode BREAK() { return getToken(PyFlaskParser.BREAK, 0); }
		public BreakStmtNodeContext(SimpleStmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).enterBreakStmtNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).exitBreakStmtNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyFlaskParserVisitor ) return ((PyFlaskParserVisitor<? extends T>)visitor).visitBreakStmtNode(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleIfContext extends SimpleStmtContext {
		public IfstatementContext ifstatement() {
			return getRuleContext(IfstatementContext.class,0);
		}
		public SimpleIfContext(SimpleStmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).enterSimpleIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).exitSimpleIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyFlaskParserVisitor ) return ((PyFlaskParserVisitor<? extends T>)visitor).visitSimpleIf(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprStmtNodeContext extends SimpleStmtContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprStmtNodeContext(SimpleStmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).enterExprStmtNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).exitExprStmtNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyFlaskParserVisitor ) return ((PyFlaskParserVisitor<? extends T>)visitor).visitExprStmtNode(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleAssignContext extends SimpleStmtContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public SimpleAssignContext(SimpleStmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).enterSimpleAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).exitSimpleAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyFlaskParserVisitor ) return ((PyFlaskParserVisitor<? extends T>)visitor).visitSimpleAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleForContext extends SimpleStmtContext {
		public ForstatementContext forstatement() {
			return getRuleContext(ForstatementContext.class,0);
		}
		public SimpleForContext(SimpleStmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).enterSimpleFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).exitSimpleFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyFlaskParserVisitor ) return ((PyFlaskParserVisitor<? extends T>)visitor).visitSimpleFor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleStmtContext simpleStmt() throws RecognitionException {
		SimpleStmtContext _localctx = new SimpleStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simpleStmt);
		try {
			setState(58);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new SimpleAssignContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				assignment();
				}
				break;
			case 2:
				_localctx = new SimpleReturnContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				returnStmt();
				}
				break;
			case 3:
				_localctx = new SimpleIfContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(53);
				ifstatement();
				}
				break;
			case 4:
				_localctx = new SimpleForContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(54);
				forstatement();
				}
				break;
			case 5:
				_localctx = new BreakStmtNodeContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(55);
				match(BREAK);
				}
				break;
			case 6:
				_localctx = new ContinueStmtContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(56);
				match(CONTINUE);
				}
				break;
			case 7:
				_localctx = new ExprStmtNodeContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(57);
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportstatementContext extends ParserRuleContext {
		public ImportstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importstatement; }
	 
		public ImportstatementContext() { }
		public void copyFrom(ImportstatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalImportStmtContext extends ImportstatementContext {
		public TerminalNode IMPORT() { return getToken(PyFlaskParser.IMPORT, 0); }
		public ImportListContext importList() {
			return getRuleContext(ImportListContext.class,0);
		}
		public GlobalImportStmtContext(ImportstatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).enterGlobalImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).exitGlobalImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyFlaskParserVisitor ) return ((PyFlaskParserVisitor<? extends T>)visitor).visitGlobalImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FromImportStmtContext extends ImportstatementContext {
		public TerminalNode FROM() { return getToken(PyFlaskParser.FROM, 0); }
		public List<TerminalNode> ID() { return getTokens(PyFlaskParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PyFlaskParser.ID, i);
		}
		public TerminalNode IMPORT() { return getToken(PyFlaskParser.IMPORT, 0); }
		public ImportListContext importList() {
			return getRuleContext(ImportListContext.class,0);
		}
		public List<TerminalNode> DOT() { return getTokens(PyFlaskParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(PyFlaskParser.DOT, i);
		}
		public FromImportStmtContext(ImportstatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).enterFromImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).exitFromImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyFlaskParserVisitor ) return ((PyFlaskParserVisitor<? extends T>)visitor).visitFromImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportstatementContext importstatement() throws RecognitionException {
		ImportstatementContext _localctx = new ImportstatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importstatement);
		int _la;
		try {
			setState(73);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FROM:
				_localctx = new FromImportStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				match(FROM);
				setState(61);
				match(ID);
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==DOT) {
					{
					{
					setState(62);
					match(DOT);
					setState(63);
					match(ID);
					}
					}
					setState(68);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(69);
				match(IMPORT);
				setState(70);
				importList();
				}
				break;
			case IMPORT:
				_localctx = new GlobalImportStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				match(IMPORT);
				setState(72);
				importList();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportListContext extends ParserRuleContext {
		public ImportListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importList; }
	 
		public ImportListContext() { }
		public void copyFrom(ImportListContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportListNodeContext extends ImportListContext {
		public List<TerminalNode> ID() { return getTokens(PyFlaskParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PyFlaskParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PyFlaskParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PyFlaskParser.COMMA, i);
		}
		public ImportListNodeContext(ImportListContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).enterImportListNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyFlaskParserListener ) ((PyFlaskParserListener)listener).exitImportListNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyFlaskParserVisitor ) return ((PyFlaskParserVisitor<? extends T>)visitor).visitImportListNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportListContext importList() throws RecognitionException {
		ImportListContext _localctx = new ImportListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importList);
		int _la;
		try {
			_localctx = new ImportListNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(ID);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(76);
				match(COMMA);
				setState(77);
				match(ID);
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
